syntax = "proto3";

package common;

import "google/protobuf/timestamp.proto";

// Struct to uniquely identify a resource with optional additional metadata
message Metadata {
  // created_at set by server (entity who created will recorded in an audit event)
  google.protobuf.Timestamp created_at = 1;
  // updated_at set by server (entity who updated will recorded in an audit event)
  google.protobuf.Timestamp updated_at = 2;
  // optional short description
  map<string, string> labels = 3;
}

message MetadataMutable {
  // optional labels
  map<string, string> labels = 3;
}

enum MetadataUpdateEnum {
  // unspecified update type
  METADATA_UPDATE_ENUM_UNSPECIFIED = 0;
  // only update the fields that are provided
  METADATA_UPDATE_ENUM_EXTEND = 1;
  // replace the entire metadata with the provided metadata
  METADATA_UPDATE_ENUM_REPLACE = 2;
}

// buflint ENUM_VALUE_PREFIX: to make sure that C++ scoping rules aren't violated when users add new enum values to an enum in a given package
enum ActiveStateEnum {
  ACTIVE_STATE_ENUM_UNSPECIFIED = 0;
  ACTIVE_STATE_ENUM_ACTIVE = 1;
  ACTIVE_STATE_ENUM_INACTIVE = 2;
  ACTIVE_STATE_ENUM_ANY = 3;
}

// message ListOptions {
// TODO: limit/offset [https://github.com/opentdf/platform/issues/55]
// }
